infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velsec-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik" # default on K3s
spec:
  tls:
  - hosts:
    - velsec.com
    - "*.velsec.com"
    secretName: velsec-tls-secret
  rules:
  - host: velsec.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: velsec-backend-svc
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: velsec-frontend-svc
            port:
              number: 80
  # Note: The Next.js middleware handles routing learn.velsec.com, notes.velsec.com etc.
  # So we wildcard them back to the frontend service.
  - host: "*.velsec.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: velsec-frontend-svc
            port:
              number: 80
